--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -10,6 +10,12 @@
   align-items: center;
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .backToHome {
   margin: 3rem 0 0;
 }
