--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -20,3 +20,21 @@
 .backToHome {
   margin: 3rem 0 0;
 }
+
+.toggleThemeButton {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+
+.toggleThemeButtonParent {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  direction: inherit;
+}
