--- a/src/app/not-found.module.scss
+++ b/src/app/not-found.module.scss
@@ -11,6 +11,11 @@
   .image {
     @extend .margin1rem;
     display: block;
+
+    // Invert image colors in dark mode
+    :global([data-theme='dark']) & {
+      filter: invert(1);
+    }
   }
 
   h1 {
@@ -21,7 +26,7 @@
 
   p {
     @extend .margin1rem;
-    
+
     a {
       color: var(--link-color);
       text-decoration: none;
